реализовал табы ЦКТВ КТВ и Телефонии

--- a/web/WebGenerator.html
+++ b/web/WebGenerator.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="MainForm/reset.css" />
     <link type="text/css" rel="stylesheet" href="WebGenerator.css">
     <script type="text/javascript" language="javascript" src="WebGenerator/WebGenerator.nocache.js"></script>
+    <link rel="shortcut icon" href="img/icon.png" type="image/png">
 </head>
 
 <body>
